# realsense-holder-calibration

./: CMakeLists.txt  README.md
app/conf/: config.ini
src/: CMakeLists.txt  Calibration.cpp  Calibration.h  config.ini  main.cpp
src/calibration/: CMakeLists.txt
src/calibration/app/: calibration.xml  calibration_sim.xml
src/calibration/app/conf/: config.ini  config_iCubGenova01_holder_half_tilted.ini  config_iCubGenova01_holder_no_tilt.ini  config_iCubGenova01_holder_tilt.ini  config_rs.ini
src/calibration/include/: Calibration.h
src/calibration/scripts/: calibrate.sh
src/calibration/src/: Calibration.cpp  main.cpp
src/calibration/thrift/: idl.thrift
src/forward-kinematics/: CMakeLists.txt
src/forward-kinematics/include/: ForwardKinematics.h
src/forward-kinematics/src/: ForwardKinematics.cpp
src/publisher/: CMakeLists.txt
src/publisher/app/: realsense-holder-publisher.xml
src/publisher/app/conf/: config.ini
src/publisher/include/: Publisher.h  PublisherRos.h  PublisherYarp.h
src/publisher/src/: Publisher.cpp  PublisherRos.cpp  PublisherYarp.cpp  main.cpp
